creaive button added

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding-top: 2rem;
+  padding: 2rem 0 5rem;
   background-color: #3498db;
   min-height: 100vh;
 }
@@ -8,6 +8,10 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.heading {
+  color: #ffffff;
 }
 
 @media (prefers-reduced-motion: no-preference) {
