--- a/src/components/CreativeButton/index.css
+++ b/src/components/CreativeButton/index.css
@@ -1,3 +1,7 @@
+hr {
+  width: 100%;
+}
+
 .button-container {
   display: flex;
   flex-direction: column;
@@ -618,11 +622,13 @@
   top: 0;
   left: 0;
   color: white;
+  opacity: 0;
 }
 
 .first-letter-rotate:hover span::before {
   font-size: 45px;
   transform: translate(-40%, -30%) rotate(360deg);
+  opacity: 1;
 }
 
 /* 32 */
