--- a/src/components/CreativeCard/index.css
+++ b/src/components/CreativeCard/index.css
@@ -6,6 +6,7 @@
 .card {
   margin: auto;
   width: 300px;
+  margin: 10% auto;
 }
 
 /* background transition */
@@ -178,7 +179,8 @@ img {
   height: 400px;
   background-color: white;
   transition: all 0.5s;
-  margin-top: 20px;
+  margin-top: 5%;
+  margin-bottom: 10%;
 }
 
 .creative-border-card:hover {
@@ -344,6 +346,7 @@ img {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.4s;
   z-index: 2;
+  margin: 5% auto;
 }
 
 .layer-card-effect::before,
