--- a/src/components/CoolExamples/index.css
+++ b/src/components/CoolExamples/index.css
@@ -1,4 +1,251 @@
 .cool-expample-container {
-  background-color: gainsboro;
+  background-color: rgb(160, 158, 158);
   padding: 80px 0;
+}
+
+/* smoky-text  */
+.smoky-text {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8% 0;
+  background-color: rgb(255, 99, 71);
+}
+
+.smoky-text li {
+  list-style: none;
+  color: white;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 10px;
+  transition: 2s;
+}
+
+.smoky-text:hover li {
+  transform: rotate(45deg) translateY(-200px);
+  opacity: 0;
+  filter: blur(20px);
+}
+
+.smoky-text li:nth-child(1) {
+  transition-delay: 0;
+}
+
+.smoky-text li:nth-child(2) {
+  transition-delay: 0.4s;
+}
+
+.smoky-text li:nth-child(3) {
+  transition-delay: 0.8s;
+}
+
+.smoky-text li:nth-child(4) {
+  transition-delay: 1.2s;
+}
+
+.smoky-text li:nth-child(5) {
+  transition-delay: 1.6s;
+}
+
+/* fill-text */
+.fill-text {
+  padding: 2% 0;
+}
+
+.fill-text h2 {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 120px;
+  color: #ccc;
+  text-transform: uppercase;
+  position: relative;
+  background-color: turquoise;
+  text-align: left;
+}
+
+.fill-text h2::before {
+  content: "text";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: #262626;
+  width: 0%;
+  overflow: hidden;
+  transition: all 0.8s;
+}
+
+.fill-text h2:hover::before {
+  width: 100%;
+}
+
+/* container-social-media */
+.container-social-media {
+  display: flex;
+  padding: 2% 0;
+  text-align: center;
+  justify-content: center;
+}
+
+.container-social-media .icon {
+  width: 90px;
+  height: 90px;
+  background-color: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  color: #10ac84;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 5px 15px -5px #00000070;
+  position: relative;
+  overflow: hidden;
+}
+
+.container-social-media .icon i {
+  line-height: 90px;
+  font-size: 25px;
+  transition: all 0.2s;
+}
+
+.container-social-media .icon:hover i {
+  transform: scale(1.3);
+  color: #f1f1f1;
+}
+
+.container-social-media .icon::before {
+  content: "";
+  position: absolute;
+  width: 130%;
+  height: 130%;
+  background-color: #10ac84;
+  left: -110%;
+  top: 90%;
+  transform: rotate(45deg);
+}
+
+.container-social-media .icon:hover::before {
+  animation: animation 0.7s 1 forwards;
+}
+
+@keyframes animation {
+  0% {
+    left: -110%;
+    top: 90%;
+  }
+  50% {
+    left: 15%;
+    top: -30%;
+  }
+  100% {
+    left: -10%;
+    top: -10%;
+  }
+}
+
+/* rotate text border */
+.rotate-text-border {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  box-sizing: border-box;
+  background-color: yellow;
+  margin: 5% auto;
+}
+
+.rotate-text-border h1 {
+  margin: 0;
+  padding: 0;
+  color: #272727;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.rotate-text-border span {
+  color: #58c747;
+  font-size: 30px;
+}
+
+.rotate-text-border::before,
+.rotate-text-border::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: all 0.5s;
+}
+
+.rotate-text-border::before {
+  border-top: 4px solid #58c747;
+  border-bottom: 4px solid #58c747;
+  transform: scaleX(0);
+}
+.rotate-text-border::after {
+  border-left: 4px solid #58c747;
+  border-right: 4px solid #58c747;
+  transform: scaleY(0);
+  transition-delay: 0.5s;
+}
+
+.rotate-text-border:hover::before {
+  transform: scaleX(1);
+}
+
+.rotate-text-border:hover:after {
+  transform: scaleY(1);
+}
+
+.rotate-text-border .rotated {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: yellow;
+  transform: rotate(45deg);
+  box-sizing: border-box;
+}
+
+.rotate-text-border .rotated::before,
+.rotate-text-border .rotated::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: all 0.5s;
+}
+
+.rotate-text-border .rotated::before {
+  border-top: 4px solid #58c747;
+  border-bottom: 4px solid #58c747;
+  transform: scaleX(0);
+  transition-delay: 1s;
+}
+.rotate-text-border .rotated::after {
+  border-left: 4px solid #58c747;
+  border-right: 4px solid #58c747;
+  transform: scaleY(0);
+}
+
+.rotate-text-border:hover .rotated::before {
+  transform: scaleX(1);
+}
+
+.rotate-text-border:hover .rotated:after {
+  transform: scaleY(1);
+  transition-delay: 1.5s;
 }
