--- a/src/components/CreativeButton/index.css
+++ b/src/components/CreativeButton/index.css
@@ -709,7 +709,7 @@ hr {
   /* margin-bottom: 20%; */
 }
 
-.wave {
+.wave-btn .wave {
   position: absolute;
   display: block;
   height: 100%;
@@ -721,7 +721,7 @@ hr {
   transition: all 1s;
 }
 
-.wave::before {
+.wave-btn .wave::before {
   content: "";
   position: absolute;
   left: 0;
